--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <h2>My Skills</h2>
         <div class="container experience__container">
             <div class="experience__frontend">
-                <h3>FrontEnd Development</h3>
+                <h2>FrontEnd Development</h2>
                 <div class="experience__content">
                     <article class="experience__details">
                         <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" class="experience__details-icon" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
@@ -172,7 +172,7 @@
                             </path>
                         </svg>
                         <div>
-                            <h4>HTML</h4>
+                            <h3>HTML</h3>
                             <small class="text-align">
                              Experienced
                             </small>
@@ -187,7 +187,7 @@
                                 </path>
                              </svg>
                         <div>
-                            <h4>CSS</h4>
+                            <h3>CSS</h3>
                              <small class="text-align">
                                 Experienced
                              </small>
@@ -202,9 +202,9 @@
                             </path>
                         </svg>
                         <div>
-                            <h4>
+                            <h3>
                                 Java Script
-                            </h4>
+                            </h3>
                             <small class="text-align">
                                 Experienced
                             </small>
@@ -219,9 +219,9 @@
                             </path>
                         </svg>
                         <div>
-                            <h4>
+                            <h3>
                                 Bootstrap
-                            </h4>
+                            </h3>
                             <small class="text-align">
                                 Experienced
                             </small>
@@ -236,11 +236,11 @@
                             </path>
                         </svg>
                         <div>
-                            <h4>
+                            <h3>
                                 React
-                            </h4>
+                            </h3>
                             <small class="text-align">
-                                Experienced
+                                Learning
                             </small>
                         </div>
                     </article>
@@ -253,9 +253,9 @@
                             </path>
                         </svg>
                         <div>
-                            <h4>
+                            <h3>
                                 Java FX
-                            </h4>
+                            </h3>
                             <small class="text-align">
                                 Experienced
                             </small>
@@ -264,9 +264,9 @@
                 </div>
             </div>
             <div class="experience__backend">
-                <h3>
+                <h2>
                     BackEnd Development
-                </h3>
+                </h2>
                 <div class="experience__content">
                     <article class="experience__details">
                         <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 16 16" class="experience__details-icon" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
@@ -277,11 +277,11 @@
                             </path>
                         </svg>
                         <div>
-                            <h4>
+                            <h3>
                                 Node JS
-                            </h4>
+                            </h3>
                             <small class="text-align">
-                                Experienced
+                                Learning
                             </small>
                         </div>
                     </article>
@@ -294,9 +294,9 @@
                             </path>
                         </svg>
                         <div>
-                            <h4>
+                            <h3>
                                 Mongo DB
-                            </h4>
+                            </h3>
                             <small class="text-align">
                                 Learning
                             </small>
@@ -311,9 +311,9 @@
                             </path>
                         </svg>
                         <div>
-                            <h4>
+                            <h3>
                                 MySql
-                            </h4>
+                            </h3>
                             <small class="text-align">
                                 Experienced
                             </small>
@@ -328,9 +328,9 @@
                             </path>
                         </svg>
                         <div>
-                            <h4>
+                            <h3>
                                 Spring
-                            </h4>
+                            </h3>
                             <small class="text-align">
                                Learning
                             </small>
@@ -345,9 +345,9 @@
                             </path>
                         </svg>
                         <div>
-                            <h4>
+                            <h3>
                                 Java
-                            </h4>
+                            </h3>
                             <small class="text-align">
                                 Experienced
                             </small>
@@ -362,9 +362,9 @@
                             </path>
                         </svg>
                         <div>
-                            <h4>
-                                Express JS
-                            </h4>
+                            <h3>
+                                Kotlin
+                            </h3>
                              <small class="text-align">
                                 Learning
                              </small>
