--- a/index.html
+++ b/index.html
@@ -373,6 +373,43 @@
                 </div>
             </div>
         </div>
+        <div>
+            <div class="wrapper">
+                <article class="badge orange">
+                    <div class="rounded"><i class="fab fa-html5"></i></div>
+                </article>
+                <article class="badge blue">
+                    <div class="rounded"><i class="fab fa-css3-alt"></i></div>
+                </article>
+                <article class="badge gold">
+                    <div class="rounded"><i class="fab fa-js-square"></i></div>
+                </article>
+                <article class="badge red">
+                    <div class="rounded"><i class="fab fa-less"></i></div>
+                </article>
+                <article class="badge purple">
+                    <div class="rounded"><i class="fab fa-php"></i></div>
+                </article>
+                <article class="badge green">
+                    <div class="rounded"><i class="fab fa-node"></i></div>
+                </article>
+                <article class="badge crimson">
+                    <div class="rounded"><i class="fab fa-npm"></i></div>
+                </article>
+                <article class="badge steel">
+                    <div class="rounded"><i class="fab fa-python"></i></div>
+                </article>
+                <article class="badge pink">
+                    <div class="rounded"><i class="fab fa-sass"></i></div>
+                </article>
+                <article class="badge rebecca">
+                    <div class="rounded"><i class="fab fa-bootstrap"></i></div>
+                </article>
+                <article class="badge gainsboro">
+                    <div class="rounded"><i class="fab fa-java"></i></div>
+                </article>
+            </div>
+        </div>
     </section>
 
     <!-- projects  -->
