--- a/index.html
+++ b/index.html
@@ -419,13 +419,6 @@
         </span>
         <br>
         <div></div>
-
-      <!--  <div id="categoryParent">
-            <a id="typeAll" class onclick="typeAllClicked()">All</a>
-            <a id="typeWeb" class onclick="typeWebClicked()">Web</a>
-            <a id="typeStandalone" class onclick="typeStandaloneClicked()">Standalone</a>
-            <a id="typeAssignments" class onclick="typeAssignmentsClicked()">Assignments </a>
-        </div> -->
         <div id="projectItemsContainer" class="reveal active">
             <div class="projectItem">
                 <div class="iconsParent">
@@ -498,28 +491,7 @@
          </div>
     </section>
 
-    <!--gallery sectioning-->
-    <section id="gallery">
-        <!--title-->
-        <section>
-            <h1>Gallery</h1>
-            <div></div>
-            <div></div>
-        </section>
-        <section>
-            <!--Grid Container-->
-            <section>
-                <div></div> <!--Grid Items-->
-                <div></div> <!--Grid Items-->
-                <div></div> <!--Grid Items-->
-                <div></div> <!--Grid Items-->
-                <div></div> <!--Grid Items-->
-                <div></div> <!--Grid Items-->
-                <div></div> <!--Grid Items-->
-                <div></div> <!--Grid Items-->
-            </section>
-        </section>
-    </section>
+    <!-- contact -->
 
 
 
