--- a/index.html
+++ b/index.html
@@ -492,7 +492,44 @@
     </section>
 
     <!-- contact -->
+    <section id="contactUs">
+        <!--title-->
+        <section>
+            <h4>Contact</h4>
+        </section>
 
+        <!--contact information-->
+        <section>
+            <section>
+                <div>
+                    <div>
+                        <i class="fa-solid fa-phone"></i>
+                        <h4>Call Me On</h4>
+                        <p>+94 75 494 4970</p>
+                    </div>
+
+                    <div>
+                        <i class="fa-sharp fa-solid fa-location-dot"></i>
+                        <h4>Address</h4>
+                        <p>Kalutara, Sri Lanka</p>
+                    </div>
+
+                    <div>
+                        <i class="fa-solid fa-envelope"></i>
+                        <h4>Email</h4>
+                        <p>sachinivonodya2001@gmail.com</p>
+                    </div>
+
+                    <div>
+                        <i class="fa-solid fa-earth-europe"></i>
+                        <h4>Blog </h4>
+                        <p>https://tehietulips.blogspot.com</p>
+                    </div>
+                </div>
+            </section>
+        </section>
+    </section>
+</main>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
