--- a/index.html
+++ b/index.html
@@ -530,9 +530,46 @@
         </section>
     </section>
 </main>
+<!--footer sectioning-->
+<footer>
+    <section>
+        <div>
+            <h2>Sachini<span>Vinodya.</span></h2>
+            <nav>
+                <div><a href="https://www.facebook.com/nowety.pasan" target="_blank"><i
+                        class="fa-brands fa-facebook-f"></i></a></div>
+                <div><a href="https://www.instagram.com/_.shenux._/?hl=en" target="_blank"><i
+                        class="fa-brands fa-instagram"></i></a></div>
+                <div><a href="https://lk.linkedin.com/in/pasan-pahasara-356a75165" target="_blank"><i
+                        class="fa-brands fa-linkedin-in"></i></a></div>
+                <div><a href="https://twitter.com/PasanPahasara" target="_blank"><i
+                        class="fa-brands fa-twitter"></i></a></div>
+                <div><a href="https://github.com/Pasan-Pahasara" target="_blank"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </nav>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#Edu">Services</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contactUs">Contact</a></li>
+                </ul>
+            </nav>
+            <h2>Portfo<span>lio.</span></h2>
+        </div>
+    </section>
+    <aside>
+        <!--        <h4>Quick Contact</h4>-->
+    </aside>
+    <section><small>@2023 Sachini Vinodya, Inc. All rights reserved</small></section>
+</footer>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
 <!--jQuery-->
 <script src="assets/jQuery/jquery-3.6.1.min.js"></script>
 <script src="assets/js/main.js"></script>
