--- a/index.html
+++ b/index.html
@@ -490,60 +490,18 @@
          <div class="ViewAssignment"> <a href="pages/Assignment.html" target="_blank">Go To Assignments </a>
          </div>
     </section>
-
-    <!-- contact -->
-    <section id="contactUs">
-        <!--title-->
-        <section>
-            <h4>Contact</h4>
-        </section>
-
-        <!--contact information-->
-        <section>
-            <section>
-                <div>
-                    <div>
-                        <i class="fa-solid fa-phone"></i>
-                        <h4>Call Me On</h4>
-                        <p>+94 75 494 4970</p>
-                    </div>
-
-                    <div>
-                        <i class="fa-sharp fa-solid fa-location-dot"></i>
-                        <h4>Address</h4>
-                        <p>Kalutara, Sri Lanka</p>
-                    </div>
-
-                    <div>
-                        <i class="fa-solid fa-envelope"></i>
-                        <h4>Email</h4>
-                        <p>sachinivonodya2001@gmail.com</p>
-                    </div>
-
-                    <div>
-                        <i class="fa-solid fa-earth-europe"></i>
-                        <h4>Blog </h4>
-                        <p>https://tehietulips.blogspot.com</p>
-                    </div>
-                </div>
-            </section>
-        </section>
-    </section>
 </main>
+
 <!--footer sectioning-->
 <footer>
     <section>
         <div>
-            <h2>Sachini<span>Vinodya.</span></h2>
+            <h2>Portfo<span>lio.</span></h2>
             <nav>
                 <div><a href="https://www.facebook.com/nowety.pasan" target="_blank"><i
                         class="fa-brands fa-facebook-f"></i></a></div>
-                <div><a href="https://www.instagram.com/_.shenux._/?hl=en" target="_blank"><i
-                        class="fa-brands fa-instagram"></i></a></div>
                 <div><a href="https://lk.linkedin.com/in/pasan-pahasara-356a75165" target="_blank"><i
                         class="fa-brands fa-linkedin-in"></i></a></div>
-                <div><a href="https://twitter.com/PasanPahasara" target="_blank"><i
-                        class="fa-brands fa-twitter"></i></a></div>
                 <div><a href="https://github.com/Pasan-Pahasara" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
             </nav>
@@ -551,7 +509,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#Edu">Services</a></li>
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#projects">Projects</a></li>
@@ -568,8 +526,7 @@
 </footer>
 
 
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
 <!--jQuery-->
 <script src="assets/jQuery/jquery-3.6.1.min.js"></script>
 <script src="assets/js/main.js"></script>
