--- a/index.html
+++ b/index.html
@@ -498,22 +498,22 @@
         <div>
             <h2>Portfo<span>lio.</span></h2>
             <nav>
-                <div><a href="https://www.facebook.com/nowety.pasan" target="_blank"><i
+                <div><a href="https://web.facebook.com/profile.php?id=100089564455632" target="_blank"><i
                         class="fa-brands fa-facebook-f"></i></a></div>
-                <div><a href="https://lk.linkedin.com/in/pasan-pahasara-356a75165" target="_blank"><i
+                <div><a href="https://www.linkedin.com/in/sachini-vinodya-a11ba220a/" target="_blank"><i
                         class="fa-brands fa-linkedin-in"></i></a></div>
-                <div><a href="https://github.com/Pasan-Pahasara" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <div><a href="https://github.com/sachinivindoya" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
             </nav>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <li><a href="#Edu">Edu & Work</a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contactUs">Contact</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <h2>Portfo<span>lio.</span></h2>
