--- a/index.html
+++ b/index.html
@@ -490,6 +490,36 @@
          <div class="ViewAssignment"> <a href="pages/Assignment.html" target="_blank">Go To Assignments </a>
          </div>
     </section>
+
+    <!-- contact -->
+    <section id="contact">
+        <div class="info">
+            <div class="details">
+                <i class="fa-solid fa-phone"></i>
+                <h4>Call Us On</h4>
+                <p>+94 717133074</p>
+            </div>
+
+            <div class="details">
+                <i class="fa-sharp fa-solid fa-location-dot"></i>
+                <h4>Address</h4>
+                <p>Galle, Sri Lanka</p>
+            </div>
+
+            <div class="details">
+                <i class="fa-solid fa-envelope"></i>
+                <h4>Email</h4>
+                <p>pahasara@info.com</p>
+            </div>
+
+            <div class="details">
+                <i class="fa-solid fa-earth-europe"></i>
+                <h4>Web Site</h4>
+                <p>www.pahasara@epizy.com</p>
+            </div>
+        </div>
+    </section>
+
 </main>
 
 <!--footer sectioning-->
