--- a/index.html
+++ b/index.html
@@ -496,26 +496,26 @@
         <div class="info">
             <div class="details">
                 <i class="fa-solid fa-phone"></i>
-                <h4>Call Us On</h4>
-                <p>+94 717133074</p>
+                <h4>Call Me On</h4>
+                <p>+94 75 494 970</p>
             </div>
 
             <div class="details">
                 <i class="fa-sharp fa-solid fa-location-dot"></i>
                 <h4>Address</h4>
-                <p>Galle, Sri Lanka</p>
+                <p>kalutara, Sri Lanka</p>
             </div>
 
             <div class="details">
                 <i class="fa-solid fa-envelope"></i>
                 <h4>Email</h4>
-                <p>pahasara@info.com</p>
+                <p>sachinivonodya2001@gmail.com</p>
             </div>
 
             <div class="details">
                 <i class="fa-solid fa-earth-europe"></i>
-                <h4>Web Site</h4>
-                <p>www.pahasara@epizy.com</p>
+                <h4>Blog</h4>
+                <p>https://tehietulips.blogspot.com</p>
             </div>
         </div>
     </section>
