--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section id="about">
         <!--title-->
         <section>
-            <h1>About Me</h1>
+            <h1>ABOUT ME</h1>
         </section>
         <div>
 
@@ -120,7 +120,7 @@
 
     <!-- education -->
     <section id="education">
-       <div class="eduTitle"><h1>My Education Journey</h1></div>
+       <div class="eduTitle"><h1>MY EDUCATION JOURNEY</h1></div>
         <ul class="eduMenu">
             <li style="--accent-color: #7ecb79">
                 <div class="date">2017</div>
@@ -157,7 +157,7 @@
 
     <!-- skills -->
     <section id="experience">
-        <h2>My Skills</h2>
+        <h2>MY SKILLS</h2>
         <div class="container experience__container">
             <div class="experience__frontend">
                 <h2>FrontEnd Development</h2>
@@ -492,6 +492,9 @@
     </section>
 
     <!-- contact -->
+    <section id="conTopic">
+        <p class="top"> CONTACT</p>
+    </section>
     <section id="contact">
         <div class="info">
             <div class="details">
@@ -518,6 +521,7 @@
                 <p>https://tehietulips.blogspot.com</p>
             </div>
         </div>
+
     </section>
 
 </main>
