--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <ul>
             <li><a class="active-hover-line" href="#home" id="active">Home</a></li>
             <li><a class="hover-line" href="#about">About</a></li>
-            <li><a class="hover-line" href="#Edu">Edu & Work</a></li>
-            <li><a class="hover-line" href="#skills">Skills</a></li>
-            <li><a class="hover-line" href="#projects">Projects</a></li>
+            <li><a class="hover-line" href="#education">Edu & Work</a></li>
+            <li><a class="hover-line" href="#experience">Skills</a></li>
+            <li><a class="hover-line" href="#projectsSectionMainParent">Projects</a></li>
             <li><a class="hover-line" href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -117,7 +117,7 @@
         </section>
     </section>
 
-    <!-- education -->
+    <!-- education ----------------------------------------------------------------------------------------------------->
     <section id="education">
        <div class="eduTitle"><h1>MY EDUCATION JOURNEY</h1></div>
         <ul class="eduMenu">
@@ -297,8 +297,8 @@
                                 Mongo DB
                             </h3>
                             <small class="text-align">
-                                Learning
                             </small>
+                                Learning
                         </div>
                     </article>
                     <article class="experience__details">
@@ -542,9 +542,9 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#Edu">Edu & Work</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#education">Edu & Work</a></li>
+                    <li><a href="#experience">Skills</a></li>
+                    <li><a href="#projectsSectionMainParent">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
