--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                     <h3>Hello , I am</h3>
                     <h1> Blogger | Web Designer | Software Engineer student</h1>
                     <h1>S<span class="typing"></span>|</h1>
-                     <button> Get CV </button>
+                     <button> <a href="assets/doc/Sachini's Resume (1).pdf" target="_blank">Get Cv
+                     </a> </button>
+
                     <!--social images-->
                     <section>
                         <h3>Find Me</h3>
