--- a/assignments/IJSE-Assignment8/case_01.html
+++ b/assignments/IJSE-Assignment8/case_01.html
@@ -119,7 +119,7 @@
         queArray.map(value => {
 
             $('.container ul').append("<li>"+value+
-                "<img src='assets/gif/XOsX.gif'>"+
+                "<img src='./assets/gif/XOsX.gif'>"+
                 "</li>");
         });
 
