--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -120,11 +120,7 @@
                 <div class="As">
                     <p> "At this point we start to learn Javascript "</p>
                     <a href="https://sachinivindoya.github.io/IJSE-Assignment8/" target="_blank">
-                        <button>case 01</button></a>
-                    <br>
-                    <br>
-                    <a href="/assignments/IJSE-Assignment8/case_01.html" target="_blank">
-                        <button>Case 02</button></a>
+                        <button> View </button></a>
                     <br>
                     <br>
                     <a href="https://github.com/sachinivindoya/IJSE-Assignment8" target="_blank">
