--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h3>Hello , I am</h3>
                     <h1> Blogger | Web Designer | Software Engineer student</h1>
                     <h1>S<span class="typing"></span>|</h1>
-                     <button> <a href="assets/doc/Sachini's Resume (1).pdf" target="_blank">Get Cv
+                     <button> <a href="assets/doc/Sachini_Vinodya-CV.pdf" target="_blank">Get Cv
                      </a> </button>
 
                     <!--social images-->
